--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 <body>
 	<h1 id="title">Welcome Home Hero!</h1>
 	<script src="./assets/js/app.js"></script>
+	<form action="" data-form="">
+		<input type="text" name="Hero">
+		<button>Procurar</button>
+	</form>
 </body>
 </html>
