--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
 	<link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
-	<h1 id="title">Welcome Home Hero!</h1>
-	<script src="./assets/js/app.js"></script>
-	<form action="" data-form="">
-		<input type="text" name="Hero">
-		<button>Procurar</button>
-	</form>
+	<h1 class="title">Welcome Home Hero!</h1>
+	<content>
+		<script src="./assets/js/app.js"></script>
+		<form action="" data-form="">
+			<input placeholder="Choose a hero's name" type="text" name="Hero">
+			<button>Chose your Hero</button>
+		</form>
+		<div class="togg">
+			<button id="tgb" style="width:60px" onclick="">Heroi</button>
+		</div>	
+		<form action="" data-form2="">
+			<input placeholder="Choose an event's name" type="text" name="Event">
+			<button>Event</button>
+		</form>
+	</content>
 </body>
 </html>
